--- a/gb/19/2/1/n11017323.md
+++ b/gb/19/2/1/n11017323.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tvywxb329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/tvywxb329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/tvywxb329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tvywxb329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tvywxb329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tvywxb329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tvywxb329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tvywxb329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“令人起敬 富含灵感”平面设计师赞神韵</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/1901312331292124-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2019年02月01日讯】（大纪元记者林南宇美国代顿报导 ）“<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>美丽神奇，给人以启迪。”“神韵<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>背景如动画般的奇妙，一流顶级。”平面设计师Janette Torres-Gomez与丈夫AL Gomez双双称赞道。</p>
-<p>Gomez夫妇二人于2019年1月31日晚，一同前往美国<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E4%BB%A3%E9%A1%BF%E7%96%8F%E6%96%AF%E7%89%B9%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">代顿疏斯特艺术中心</a>（Dayton Schuster Performing Arts Center）欣赏了<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团的精湛演出。他们钦佩神韵艺术家带来的舞蹈、<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>、天幕高超非凡，表示演出令人振奋，久久难忘。</p>
+	<p>【大纪元2019年02月01日讯】（大纪元记者林南宇美国代顿报导 ）“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>美丽神奇，给人以启迪。”“神韵<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>背景如动画般的奇妙，一流顶级。”平面设计师Janette Torres-Gomez与丈夫AL Gomez双双称赞道。</p>
+<p>Gomez夫妇二人于2019年1月31日晚，一同前往美国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BB%A3%E9%A1%BF%E7%96%8F%E6%96%AF%E7%89%B9%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">代顿疏斯特艺术中心</a>（Dayton Schuster Performing Arts Center）欣赏了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团的精湛演出。他们钦佩神韵艺术家带来的舞蹈、<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>、天幕高超非凡，表示演出令人振奋，久久难忘。</p>
 <p>Janette做为一名平面设计师，为神韵的色彩而感到惊叹，“这给我很多的灵感启示。”她说，“我看到神韵的色彩主题是如此的美丽，我想把这样的色彩尽可能的带入我自己的生活中，以及同时更多地融入我的工作中。”</p>
 <p>她介绍说自己在美国手表、钟表制造学院工作，她赞佩神韵的色彩独树一帜。</p>
 <p>神韵以中国古典舞为基础，演绎了中国五千年传统文化的精深内涵，Janette表示神韵艺术家令人起敬，“我们喜欢流畅的舞蹈动作，每个角色脸上都挂着美丽的笑容，就像他们喜欢自己所做的事情一样。他们以身体倾诉着艺术的语言，绽放着美丽、热情和光明。真的做得太棒了！”</p>
@@ -15,7 +15,7 @@
 <p>“神韵跨越了文化，因为如果他们不把这些讲述出来，那就没有任何意义了。神韵的舞蹈很有表现力，他们准确地说出所发生的事实，所以让人们感到非常、非常的难以忘怀。”他觉得神韵小舞剧讲述的故事风趣幽默，感人至深。</p>
 <p>夫妇两人认为神韵艺术团肩负着复兴传统文化的使命，为找回失落已久的文明做出了极大的贡献。“我感到非常惊讶的是，他们能够在美国表达他们过去的文化，他们不能在自己的国家呈现这样的演出。所以从历史的角度上看，这场演出非常的有意义。” Janette说道。</p>
 <p>“这是一种悲哀和遗憾。 这样的演出只能说明他们（中国人）可能还是没有那么多的自由，所以这很不幸。” Gomez认为神韵同时有6个不同的演出团体在世界各地巡回演出，揭示了真相，保留了传统，艺术家为此付出的辛劳令人敬佩。</p>
-<p>他还盛赞神韵<ahref="https://github.com/tvywxb329/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>有着惊人的特效，“演出令人惊叹！我们喜欢她的色彩和她的动态天幕的展示，我不知道他们是如何做到这一点的？有动画般的效果。”他说。</p>
+<p>他还盛赞神韵<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>有着惊人的特效，“演出令人惊叹！我们喜欢她的色彩和她的动态天幕的展示，我不知道他们是如何做到这一点的？有动画般的效果。”他说。</p>
 <p>他描述道：“动画逼真， 当他们（角色）从天幕中飞身而下，然后回升而去，瞬间又跃然出现在舞台上，哇！ 那是如此的神奇，我从来没见过这样的奇妙景象。所有的一切都是世界级的， 绝对一流。”</p>
 <p>责任编辑：夏晶</p>
 	
@@ -23,38 +23,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/1/n10946332.md#1">美丽迷人 发人深省 公司老板反思人类生活</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/31/n11015233.md#1">不畏酷寒争睹演出 美国代顿金融界盛赞神韵</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/31/n11015377.md#1">银行经理：无论天气如何 我们都不会错过神韵</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/31/n11015407.md#1">“如女子吟唱”行政主管赞神韵二胡神奇</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/31/n11015482.md#1">“神韵舞蹈完美”俄州前美国小姐赞叹</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/31/n11015657.md#1">充满能量 带来希望 作家赞赏神韵很精彩</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/1/n10946332.md#1">美丽迷人 发人深省 公司老板反思人类生活</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/31/n11015233.md#1">不畏酷寒争睹演出 美国代顿金融界盛赞神韵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/31/n11015377.md#1">银行经理：无论天气如何 我们都不会错过神韵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/31/n11015407.md#1">“如女子吟唱”行政主管赞神韵二胡神奇</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/31/n11015482.md#1">“神韵舞蹈完美”俄州前美国小姐赞叹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/31/n11015657.md#1">充满能量 带来希望 作家赞赏神韵很精彩</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281364.md#1">中共关闭美驻成都领事馆 白宫发警告</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281175.md#1">休斯顿中共总领事宣称不撤离 蓬佩奥回应</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281834.md#1">【重播】休斯顿中领馆关闭 美政府人员进驻</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12280529.md#1">战胜中共暴政 蓬佩奥重磅演讲全文字幕版</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281618.md#1">曾藏匿旧金山中领馆 中共空军女军官被捕</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281841.md#1">王力宏小儿子天赋异禀 不到2岁就拉小提琴</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12282113.md#1">维持苗条身材之秘辛？IU吃饭习惯获夸赞</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/24/n12281716.md#1">染疫保密3个月 好莱坞明星梅尔·吉布森曝现况</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/23/n12279170.md#1">随剧组惨遇泥石流 张雨绮贴灾难现场照报平安</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/23/n12278817.md#1">吴奇隆公司申请香港上市 刘诗诗和赵丽颖参股</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/5/25/n12135940.md#1">德行败坏的子弟  导致贾府破家之灾</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/22/n12274131.md#1">【命理】为何算命先生算不准？</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/20/n12269082.md#1">【杨延昭传奇】古井生木</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/21/n12271981.md#1">“一了百了” 如何了得？</a></li>
-<li><a href="https://github.com/tvywxb329/djy/blob/master/gb/20/7/23/n12276969.md#1">新的人生在兑现（2）</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tvywxb329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tvywxb329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/1/n11017323.htm">“令人起敬 富含灵感”平面设计师赞神韵</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/1/n11017323.htm">“令人起敬 富含灵感”平面设计师赞神韵</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://fo04.szzdcdn.tv/v.php?action=qrcode&url=https://github.com/tvywxb329/djy/blob/master/gb/19/2/1/n11017323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tvywxb329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tvywxb329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tvywxb329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tvywxb329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tvywxb329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11017323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
